@@ -16,7 +16,8 @@
 	["nmf", "nmf-mk01"],
 	["secondary-crusher", "secondary-crusher-mk01"],
 	["thickener", "thickener-mk01"],
-	["xyhiphoe-pool", "xyhiphoe-pool-mk01"]
+	["xyhiphoe-pool", "xyhiphoe-pool-mk01"],
+	["vacuum-pump", "vacuum-pump-mk01"]
   ],
   "item":
   [
@@ -34,6 +35,26 @@
 	["nmf", "nmf-mk01"],
 	["secondary-crusher", "secondary-crusher-mk01"],
 	["thickener", "thickener-mk01"],
-	["xyhiphoe-pool", "xyhiphoe-pool-mk01"]
+	["xyhiphoe-pool", "xyhiphoe-pool-mk01"],
+	["vacuum-pump", "vacuum-pump-mk01"]
+  ],
+  "recipe":
+  [
+    ["agitator", "agitator-mk01"],
+	["automated-screener", "automated-screener-mk01"],
+	["centrifugal-pan", "centrifugal-pan-mk01"],
+	["compressor", "compressor-mk01"],
+	["gas-separator", "gas-separator-mk01"],
+	["genlab", "genlab-mk01"],
+	["grease-table", "grease-table-mk01"],
+	["hydrocyclone", "hydrocyclone-mk01"],
+	["jig", "jig-mk01"],
+	["kmauts-enclosure", "kmauts-enclosure-mk01"],
+	["mixer", "mixer-mk01"],
+	["nmf", "nmf-mk01"],
+	["secondary-crusher", "secondary-crusher-mk01"],
+	["thickener", "thickener-mk01"],
+	["xyhiphoe-pool", "xyhiphoe-pool-mk01"],
+	["vacuum-pump", "vacuum-pump-mk01"]
   ]
 }
